adds marking of product inCart for all methods